# cafematchboxarchive

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/rules/: workflow.md
.github/: copilot-instructions.md
.github/workflows/: copilot-auto-pr-review.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  auth_oidc.py  images.py  matchboxes.py
backend/app/auth/: jwt.py  oidc.py
backend/app/db/: client.py  matchboxes.py  users.py
backend/app/models/: matchbox.py  user.py
backend/app/storage/: s3.py
backend/tests/: conftest.py  test_auth.py  test_auth_oidc.py  test_images.py  test_matchboxes.py  test_oidc_verifier.py
docs/superpowers/plans/: 2026-04-25-oidc-auth.md
docs/superpowers/specs/: 2026-04-22-production-architecture-design.md  2026-04-25-oidc-auth-design.md
frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/auth/: oidc.js  oidc.test.js
frontend/src/components/: Identicon.jsx  LoginModal.jsx  MapView.jsx  MapView.test.jsx  MatchGrid.jsx  Matchbox.jsx  SearchBox.jsx  TagBar.jsx  TopBar.jsx  UserMenu.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/screens/: AboutScreen.jsx  AccountScreen.jsx  CafeDetail.jsx  EditScreen.jsx  MyGallery.jsx  OidcCallbackScreen.jsx  PublicGallery.jsx
infra/: samconfig.toml  template.yaml
scripts/: process_matchbox_photos.py  requirements.txt
