[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0.0",
    "boto3>=1.34.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "mangum>=0.17.0",
    "moto[dynamodb,s3]>=5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]
